--- a/.github/workflows/automerge-approved-prs.yml
+++ b/.github/workflows/automerge-approved-prs.yml
@@ -23,7 +23,7 @@ jobs:
       id-token: write
     if: >-
       github.event.review.state == 'approved' &&
-      github.event.repository == 'lehmanmj/configure-aws-credentials' &&
+      github.repository == 'lehmanmj/configure-aws-credentials' &&
       (github.event.review.author_association == 'OWNER' || github.event.review.user.login == 'aws-sdk-osds')
     runs-on: ubuntu-latest
     steps:
