--- a/.github/workflows/automerge-approved-prs.yml
+++ b/.github/workflows/automerge-approved-prs.yml
@@ -3,13 +3,28 @@ on:
     types: submitted
 
 jobs:
+  print_stuff:
+    name: Print stuff for the if stmt check
+    runs-on: ubuntu-latest
+    steps:
+    - name: Print context
+      run: |
+        echo "The review state is ${{ github.event.review.state }}"
+        echo "The repository is ${{ github.repository }}"
+        echo "The review author-association is ${{ github.event.review.author_association }}"
+        echo "The review user-login is ${{ github.event.review.user.login }}"
+
   approved_pr:
     name: Automerge approved PRs
+    needs: print_stuff
     permissions:
       contents: write
       pull-requests: write
       id-token: write
-    if: true
+    if: >-
+      github.event.review.state == 'approved' &&
+      github.repository == 'lehmanmj/configure-aws-credentials' &&
+      (github.event.review.author_association == 'MEMBER' || github.event.review.user.login == 'aws-sdk-osds')
     runs-on: ubuntu-latest
     steps:
       - name: Configure AWS credentials
