--- a/.github/workflows/automerge-approved-prs.yml
+++ b/.github/workflows/automerge-approved-prs.yml
@@ -21,10 +21,7 @@ jobs:
       contents: write
       pull-requests: write
       id-token: write
-    if: ${{ >-
-      github.event.review.state == 'approved' &&
-      github.repository == 'lehmanmj/configure-aws-credentials' &&
-      (github.event.review.author_association == 'OWNER' || github.event.review.author_association == 'MEMBER' || github.event.review.user.login == 'aws-sdk-osds') }}
+    if: ${{ github.event.review.state == 'approved' && github.repository == 'lehmanmj/configure-aws-credentials' && (github.event.review.author_association == 'OWNER' || github.event.review.author_association == 'MEMBER' || github.event.review.user.login == 'aws-sdk-osds') }}
     runs-on: ubuntu-latest
     steps:
       - name: Configure AWS credentials
